# social-monitoring

backend/: .env.example  .gitignore  Dockerfile  Dockerfile.api.dev  Dockerfile.api.prod  Dockerfile.collector  Dockerfile.dev  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
backend/app/: config.py  database.py  main.py
backend/app/api/universal/: health.py  router.py
backend/app/api/v1/: health.py  posts.py  router.py
backend/app/core/: logging.py  middleware.py
backend/app/models/: __init__.py  alert.py  analytics.py  base.py  collaboration.py  export.py  integration.py  mention.py  mention_category.py  mention_collaboration.py  monitor.py  notification.py  platform.py  post.py  social.py  system.py  user.py  workspace.py
backend/app/schemas/: post.py
backend/collectors/: registry.py
backend/infra/postgres/: init.sql
backend/infra/postgres/indexes/: 02_performance_indexes.sql
backend/infra/redis/: redis.conf
backend/infra/supertokens/: config.yml
backend/migrations/: env.py
backend/migrations/versions/: 20250909_103403_initial_schema.py
backend/scripts/: migrate.py  seed_data.py  setup.py  setup_database.py
