[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-media-monitor"
version = "1.0.0"
description = "Social Media Monitoring and Analytics Platform"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.35.0",
    "supertokens-python>=0.30.2",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "redis[hiredis]>=5.0.1",
    "opensearch-py>=2.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true